[tool.poetry]
name = "rlgrid"
version = "0.1.0"
description = ""
authors = ["Wattanit Hotrakool <wattanit@wattanit.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
